--- a/backend/package.json
+++ b/backend/package.json
@@ -21,5 +21,16 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "pg": "^8.16.3"
-  }
+  },
+  "devDependencies": {
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4"
+  },
+
+  "scripts": {
+  "start": "node src/index.js",
+  "test": "jest"
 }
+}
+
+
