--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,9 +6,11 @@ DB_PASSWORD=SUA_SENHA_AQUI
 DB_PORT=5432
 PGSSLMODE=require
 
-# Chaves de API e Segredos
+# Segredo para assinar os JSON Web Tokens (JWT)
+JWT_SECRET=seu_segredo_jwt
+
+# Chaves de API
 SUPABASE_URL=https://seu-projeto.supabase.co
 SUPABASE_ANON_KEY=sua_chave_publica_aqui
 SUPABASE_SERVICE_KEY=sua_chave_secreta_aqui
-JWT_SECRET=seu_segredo_jwt
 ADMIN_SECRET_KEY=sua_chave_admin
